@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1535,7 +1535,7 @@
    <date>2014-12-03</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
    </notes>
   </release>
  </changelog>
