@@ -2,6 +2,7 @@
 v3.2.4-git
 ----------
 
+[mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).
 
 
 ------
